...
        acc.saveAccountFlags()
    }

    if (acc.lockable)
    {

        AccountDetailPinInput(i18n(S.CurrentPin), i18n(S.EnterPIN), currentPin, currentPinOk,Modifier.testTag("CurrentPinCheckIcon")) {
            if (it.onlyDigits())
            {
                currentPin = it

                if (it.length < 4)
                {
...
        if (minSize == TextUnit.Unspecified) minSize = 6.sp else minSize /= 3
        var maxSize = TextStyle.Default.fontSize
        if (maxSize == TextUnit.Unspecified) maxSize = 18.sp
        BasicText(if (onOff) actualPhrase else "", style = secretStyle, minLines = 3, autoSize = TextAutoSize.StepBased(minSize, maxSize), softWrap = false,
          overflow = TextOverflow.Visible,
          onTextLayout = { overflow = it.hasVisualOverflow },
          modifier = Modifier.testTag("recoveryPhraseWords").semantics { visualOverflow = overflow })
    }
}


@Composable
fun RecoveryPhraseView(account: Account, done: () -> Unit)
...
