...
                  interactionSource = remember { MutableInteractionSource() },
                  indication = null
                ) {
                    keyboardController?.hide()
                    viewModel.checkForBlockchainConnection()
                }
                .testTag("SendScreenContentColumn")
            ) {
                if (isConfirming)
                {
                    ConfirmSend(viewModel)
                    Spacer(Modifier.height(16.dp))
                }
                else  // We do not want to show the redundant edit boxes if we have the confirmation box up.
                {
                    WallyInputField(
                      mod = Modifier.focusRequester(focusRequester).testTag("sendToAddress"),
                      text = toAddress,
                      label = i18n(S.sendToAddressHint),
                      placeholder = i18n(S.enterAddress),
                      iconContentDescription = i18n(S.clearAddress),
                      isSingleLine = false,
                      isReadOnly = isConfirming
                    ) {
                        viewModel.setToAddress(it)
                    }
                    Spacer(Modifier.height(8.dp))
                    WallyNumericInputFieldBalance(
                      mod = Modifier.testTag("amountToSendInput"),
                      amount = uiState.value.amount,
                      label = i18n(S.amountPlain),
                      placeholder = i18n(S.enterNEXAmount),
                      isReadOnly = isConfirming,
                      hasIosDoneButton = !isConfirming,
                      hasButtonRow = true,
                      focusRequester = amountFocusRequester
                    ) {
                        viewModel.setSendQty(it)
                    }
                    Spacer(Modifier.height(8.dp))
                    WallyInputField(
                      mod = Modifier.testTag("noteInput"),
                      text = note,
                      label = i18n(S.noteOptional),
                      placeholder = i18n(S.editSendNoteHint),
                      iconContentDescription = i18n(S.clearNote),
                      isReadOnly = isConfirming
                    ) {
...
