...
    <string name="badQR">QR unreadable</string>
    <string name="badImageQR">bad image QR. more...</string>
    <string name="badImageQRhelp">Try taking a picture from farther away if you took a close up of the QR code.  The white border is part of the QR code, and you can get confusing moire patterns if photographing a screen up close.</string>
    <!-- as in unlock an account -->
    <string name="unlock">unlock</string>
    <string name="share">share</string>
    <string name="Send">Send</string>
    <string name="OpenSend">Send</string>
    <string name="SendCancel">Cancel</string>
    <string name="ignoredInsecureRequest">Ignored Insecure Request</string>
    <!-- As in "Send from" what account -->
    <string name="fromAccountColon">Send from account:</string>
    <!-- if user forgot to pick an account -->
    <string name="chooseAccountError">choose an account</string>
    <!-- As in "Send to" -->
...
